# ug-erlpack

./: Cargo.toml  LICENSE  README.md
src/: convert.rs  decode.rs  encode.rs  lib.rs  splice.rs  term.rs
tests/: depth.rs  encode_value.rs  negative.rs  roundtrip.rs  splice.rs  upstream_fixtures.rs
tests/fixtures/: big_2to33.etf  big_2to33.txt  binary_hello.etf  binary_hello.txt  binary_utf8.etf  binary_utf8.txt  empty_list.txt  false_atom.etf  false_atom.txt  int_256.etf  int_256.txt  int_max_i32.etf  int_max_i32.txt  int_neg1.etf  int_neg1.txt  nested_list.etf  nested_list.txt  nil_atom.etf  nil_atom.txt  regen.py  simple_map.etf  simple_map.txt  small_int_0.txt  small_int_255.etf  small_int_255.txt  snowflake_8bytes.etf  snowflake_8bytes.txt  true_atom.etf  true_atom.txt  tuple_2.etf  tuple_2.txt
